2013-09-11  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1:
	  - Added -E/--semaphores option.
	  - Added -M/--message-queues option.
	  - Added -S/--shared-memory option.
	  - Added ref to ipcs(1).
	* src/procenv.c:
	  - Added support for displaying IPC resources (shared memory,
	    semaphores and message queues) under Linux only at this
	    stage.
	  - New utility functions: format_time(), format_perms() and
	    pid_to_name().

2013-08-30  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_stat(): Make resilient to failures.
	  - show_linux_mounts(): Show if unable to query major+minor number.
	  - show_bsd_mounts(): Show if unable to query major+minor number.
	  - get_major_minor(): Return a value rather than simply warning on
	    error.

2013-08-28  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_network(): Handle bionics lack of getifaddrs().
	  - get_arch(): Don't identify MIPSEL as MIPS.

2013-08-23  James Hunt  <james.hunt@ubuntu.com>

	* TODO: 
	* man/procenv.1:
	  - Added -A/--arguments option.
	  - Updated --mount to include reference to statfs.
	  - Added -N/--network option.
	  - Updated SEE ALSO section.
	* src/procenv.c: 
	  - Added support for BSD/Hurd signals: SIGEMT, SIGINFO, SIGLOST.
	  - usage(): Use colon to separate output types from description for
	    consistency.
	  - is_console(): Enable for FreeBSD/kFreeBSD.
	  - append(): Allocate space if str points to NULL.
	  - appendf(): Allocate space if str points to NULL.
	  - appendva(): Allocate space if str points to NULL.
	  - dump():
	    - Call show_network().
	    - Call show_locale() *after* show_rlimits() for correct ordering.
	  - show_linux_mounts(): Add block and inode details (LP: #1212728).
	  - show_bsd_mounts(): Add block and inode details (LP: #1212728).
	  - show_compiler():
	    - Added __FILE__, __BASE_FILE__ and __TIMESTAMP__.
	  - main():
	    - Updates for -N/--network.
	  - New functions:
	    - show_arguments().