@@ -18,6 +18,12 @@ if HAVE_APPARMOR
 endif
 
 TESTS =
+CLEANFILES =
+
+check_all_args: tests/check_all_args.in
+	sed -e 's|[@]abs_builddir[@]|$(abs_builddir)|g' \
+	    $< > $@
+	chmod +x $@
 
 # Dump preprocessor/compiler/linker details as debug aid should the
 # subsequent test fail.
@@ -26,4 +32,10 @@ TESTS += tests/show_compiler_details
 # Run built binary to ensure we can display all values
 TESTS += procenv
 
-EXTRA_DIST = tests/show_compiler_details
+TESTS += check_all_args
+
+CLEANFILES += check_all_args
+
+EXTRA_DIST = \
+    tests/show_compiler_details \
+    tests/check_all_args.in
